--- a/media.css
+++ b/media.css
@@ -42,7 +42,7 @@
     .categories > h1{
         font-size: 20px;
     }
-    #favorite-model{
+    #favorite-model {
         display: block;
         bottom:-560px;
     }
@@ -87,7 +87,7 @@
         overflow-y: scroll;
     }
 }
-@media (max-width : 550px) {
+@media (max-width : 550px) and (min-width:381px) {
     #favorite-model{
         top:80px;
         display: none;
@@ -135,6 +135,70 @@
     }
     .search>form>input{
         height: 40px;
+    }
+    .ddd{
+        min-height: 630px
+    }
+    .menu>div{
+        margin-inline: auto;
+        max-width: 80vw;
+    }
+}
+@media (max-width :380px) {
+    #favorite-model{
+        top:80px;
+        display: none;
+    }
+    .ddd{
+        width: 100%;
+    }
+    .ddd>:last-child{
+        overflow-y: scroll;
+        max-height: 600px;
+    }
+    .categories{
+        overflow-x:scroll;
+        max-width: 100vw ;
+        gap:10px;
+    }
+    .categories>p{
+        font-size: 15px;
+    }
+    .food{
+        width: 154px;
+        height: 210px;
+        gap:3px;
+    }
+    .imageForfood{
+        width: 154px;
+    }
+    .btns>:first-child{
+        height: 30px;
+        border-radius: 10px;
+        font-size: 13px;
+        padding: 2px;
+    }
+    h3{
+        font-size: 11px;
+    }
+    .btns>:last-child{
+        padding: 6px;
+    }
+    .food > h1{
+        font-size: 13px;
+    }
+    .food > span{
+        font-size: 10px;
+    }
+    .search>form>input{
+        height: 40px;
+    }
+    .ddd{
+        min-height: 630px
+    }
+    .menu>div{
+        margin-inline: auto;
+        max-width: 90vw;
     }
 }
 .ddd{
